<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/mov_name"  />
    
    <EditText android:layout_width="match_parent" 
              android:layout_height="wrap_content"
              android:id="@+id/name"  />
    
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/desc"  />

    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/desc"  />

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/lang"  />

    <RadioGroup android:layout_width="match_parent" android:layout_height="wrap_content"
                android:orientation="horizontal">
        <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content"
                     android:id="@+id/rbtnButton1"
                     android:text="@string/rbtn1"
                     android:onClick="RadioStore"/>
        <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content"
                     android:id="@+id/rbtnButton2"
                     android:text="@string/rbtn2"
                     android:onClick="RadioStore"/>
        <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content"
                     android:id="@+id/rbtnButton3"
                     android:text="@string/rbtn3"
                     android:onClick="RadioStore"/>
        <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content"
                     android:id="@+id/rbtnButton4"
                     android:text="@string/rbtn4"
                     android:onClick="RadioStore"/>
        <RadioButton android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
                     android:id="@+id/langName"
                     android:visibility="gone"
                     android:onClick="RadioStore" />
    </RadioGroup>
    
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/release_date"  />
    <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/date"  />

    <CheckBox android:id="@+id/chkbxMyCheckBox"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/chkbx1_text"/>

    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                  android:orientation="horizontal"
                  android:layout_weight="0.15"  >
        <CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/chkbxCheckBox2"
                  android:text="@string/chkbx_text2"
                  android:visibility="gone"  />
        <CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/chkbxCheckBox3"
                  android:text="@string/chkbx_text3"
                  android:visibility="gone"  />

    </LinearLayout>
    
    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/btnButton"
            android:text="@string/add"
            android:onClick="onBtnClick"/>

</LinearLayout>